<resources>
    <string name="app_name">Word Search</string>


    <string name="watch_ads_detail">Watch a short video ads to earn coins.</string>

    <!--    Pro features-->
    <string name="pro_no_ads">No Ads</string>
    <string name="pro_unlimited_coins">Unlimited coins</string>
    <string name="pro_unlimited_hints">Unlimited hints</string>
    <string name="pro_skip">Skip any level</string>
    <string name="pro_remove_timer">Add or remove timer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


    <string name="about_app_text_1">Word Search is really a very good game, if you just want to time pass.</string>
    <string name="about_app_text_2">The game is easy to play, you just need to slide the letter up, down, left, right, diagonal in any directions whatever you like. Search and find all the hidden words before the time ran out.</string>
    <string name="about_app_text_3">Note: our games will not forced you with the annoying ads. So, don\'t worry about ads. The ads will only play when you want.</string>
    <string name="about_app_text_4">Thanks for downloading our app :)</string>

</resources>